--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "287a0bbd-cc96-4120-887c-210b2cbf74d6"
+      "id": "eba97664-b018-4a6d-8ff6-d3ee322bd7e6"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "5e183f86-d562-469d-a888-2903a1e5c99c"
+      "id": "a19ed4e3-7c39-440f-8219-5db2a1a53bf5"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "c086c54e-6efb-4aad-8470-1c9456d525f8"
+      "id": "bb68a292-d932-42d1-a0ce-2424acf3fc72"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "3765e4b6-dfd6-450c-8c61-1ff565e25184"
+      "id": "ae09ca3f-c5c7-46cb-b144-5f78780d268b"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "c2c14fec-296f-4e97-ac6e-5deb1cca0f92"
+      "id": "19030488-739a-4fb5-8aa7-3b3960c7ccb2"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "a8840585-2928-4188-afde-b039a9113a73"
+      "id": "67208592-778c-4a61-af7b-782c9168db7a"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "23ebc4b6-0843-4d3d-aca8-1f8258ae4a0e"
+      "id": "40e5986c-9eed-4573-8d7f-37dd6b49322c"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "253eefc8-7caf-4d7e-97e2-b23b9bf14b6f"
+      "id": "a8bd02a8-5e83-42ce-beb8-59fb2df3666b"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "51b316c1-5b11-4f91-b794-63e82d9795fd"
+      "id": "7e8ddc6a-c3b1-417d-9462-9cd3a3955fa3"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "2eb517c1-aef1-47b4-846d-dbc8bf775a2a"
+      "id": "2ca7bc4e-6a5a-4f04-9870-b2644cd26904"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "ea131841-6ae7-4ad3-bfcf-32eb3e88b832"
+      "id": "02cef595-2e3f-41c7-b784-5ca882184b70"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "cd1c9b74-52cc-4184-9bd1-77761ad1ed1e"
+      "id": "4d34a0d4-54c5-4c4c-b376-3b8e40eb979b"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "007eb529-5725-458a-b34b-d1228b715aa0"
+      "id": "b4c08f01-a48b-4e20-9d83-20b29ed20972"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "8cf4181d-394b-47e9-81be-c38506f7ae69"
+      "id": "3cd82a06-686f-4060-80c8-14c0e8136ae4"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "1f6eb01f-1ad2-48c2-bec6-0174424c7886"
+      "id": "dd0eee9d-96d0-48b5-920f-51bed2856d5a"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "b0400983-db00-40f6-8da7-de1aa7a6aad0"
+      "id": "eb1084da-36de-410e-b488-c25d32a8b2c9"
     },
     {
       "cell_type": "code",
