--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -15,11 +15,11 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "b31f5b43-78fb-433a-9558-1391673a8aa3"
+      "id": "e145d342-2b60-4be5-b66e-3b19ce79b725"
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -35,11 +35,11 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "cd6e9168-8123-4a51-9f59-233090b0e48e"
+      "id": "cb90454f-a341-4ffe-bdfe-27b3aa7085e7"
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "tags": []
       },
@@ -62,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "7e1da3c6-baa6-4a25-a519-40fa4607baea"
+      "id": "cd419a4f-f587-4f01-a499-7b1950d1232c"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "0d24756d-9d14-4d60-a406-c6533d16b04b"
+      "id": "b9baeef0-2e9a-4b5f-9f25-60451fb4fc68"
     },
     {
       "cell_type": "code",
@@ -125,7 +125,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "48613c83-a257-46c5-9127-dcd2351d2a83"
+      "id": "1b577c8e-bd42-479a-a290-d790f687dba9"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "f14965f8-d803-4f61-a9f4-43be83c40cd3"
+      "id": "e3c94922-8fcc-4bca-87ae-9d220242f0e5"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "3ccffc4b-3455-4d6f-a0f3-e6e5a271eafa"
+      "id": "c8639053-681f-464a-800b-505d6fdbaa6a"
     },
     {
       "cell_type": "code",
@@ -274,7 +274,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "752271c7-0c21-4ddb-a11c-744cf1bc7e4a"
+      "id": "ad726d44-97b5-49d5-881a-b4e622dd3e02"
     },
     {
       "cell_type": "code",
@@ -314,7 +314,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "5e8b2dd7-d39b-4f00-b917-7db2f6f8c927"
+      "id": "64467072-2ff4-4aca-a736-0e2ec89e946a"
     },
     {
       "cell_type": "code",
@@ -374,7 +374,7 @@
         "\n",
         "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "3c98985d-f694-46db-9487-e5413862f4af"
+      "id": "616d14bc-4f44-4273-b941-9cf740985001"
     },
     {
       "cell_type": "code",
@@ -434,7 +434,7 @@
       "source": [
         "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "35c9b3fb-52ee-4a67-991a-b36618e907c5"
+      "id": "6778bde9-79bd-414e-8ac7-53bdaf5a290d"
     },
     {
       "cell_type": "code",
@@ -458,7 +458,7 @@
         "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
         "    출력하게 될것임"
       ],
-      "id": "fb18e979-dccc-472e-85ea-ac4a36105cf7"
+      "id": "80677e1e-1eb0-4ca3-8eee-5b18330ecd92"
     },
     {
       "cell_type": "code",
@@ -496,7 +496,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "a1279063-6d64-4df8-bf70-087d56da6a99"
+      "id": "4a2bdaff-47ce-4e70-8a26-bb09e8e6081c"
     },
     {
       "cell_type": "code",
@@ -540,7 +540,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "a819e0f5-3435-4c70-a314-927687df88e4"
+      "id": "e8ef81c6-c643-497f-97ca-9107d7c329b8"
     },
     {
       "cell_type": "code",
@@ -652,7 +652,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "e16d935f-af94-4f22-b950-639cbc077842"
+      "id": "a73f73a1-5d44-461d-b389-665f75166b7d"
     },
     {
       "cell_type": "code",
@@ -696,7 +696,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "b0e5a4db-e71a-4a82-ac03-ffaff4e6327f"
+      "id": "da7ec7da-ab3f-4c02-8237-78ddc13bfc22"
     },
     {
       "cell_type": "code",
@@ -808,7 +808,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "bd75b51f-7dbb-449f-8dd1-a3fe1c91553d"
+      "id": "0a338d50-b153-47b8-b60b-044ed061568d"
     },
     {
       "cell_type": "code",
@@ -848,7 +848,7 @@
         "\n",
         "(풀이1) – `net(X1,X2)`"
       ],
-      "id": "435ee14d-3c54-4355-83f7-a4b43a5d01e3"
+      "id": "6bfa58a9-4959-4001-919d-3bc722cd747e"
     },
     {
       "cell_type": "code",
@@ -921,7 +921,7 @@
       "source": [
         "(풀이2) – `net(X)`"
       ],
-      "id": "d5f3c9b1-c752-41ea-938f-92defee15bd9"
+      "id": "74aa7cd5-9c95-4846-9aa1-ef051d604c70"
     },
     {
       "cell_type": "code",
@@ -1024,11 +1024,11 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "3302d651-9ccb-4db5-b28c-2532d486b5ba"
+      "id": "6b5eaccd-d137-4cac-9610-32797d440f7e"
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 2,
       "metadata": {
         "tags": []
       },
@@ -1041,7 +1041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -1064,11 +1064,11 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "6cca5545-87a1-4c1a-99cd-ed6f9c197e26"
+      "id": "fba1d573-d5fd-420a-8e7d-a60aa40d155a"
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 8,
       "metadata": {
         "tags": []
       },
@@ -1079,8 +1079,8 @@
         "        super().__init__()\n",
         "        #--#\n",
         "        self.ebdd1 = torch.nn.Embedding(9,2)\n",
-        "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
+        "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.b2 = torch.nn.Embedding(8,1)\n",
         "        self.mlp = torch.nn.Sequential(\n",
         "            torch.nn.Linear(6,1),\n",
@@ -1099,7 +1099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 9,
       "metadata": {
         "tags": []
       },
@@ -1109,7 +1109,7 @@
         "loss_fn = torch.nn.MSELoss()\n",
         "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
         "#--# \n",
-        "for epoc in range(100):\n",
+        "for epoc in range(1000):\n",
         "    # 1\n",
         "    yhat = net(X1,X2) \n",
         "    # 2\n",
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 10,
       "metadata": {
         "tags": []
       },
@@ -1142,11 +1142,11 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "960023d3-c84b-4808-be63-5820c34acaf8"
+      "id": "a2afbe32-271b-4100-9242-4301c38fe9e7"
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 11,
       "metadata": {
         "tags": []
       },
@@ -1157,8 +1157,8 @@
         "        super().__init__()\n",
         "        #--#\n",
         "        self.ebdd1 = torch.nn.Embedding(9,2)\n",
-        "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
+        "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.b2 = torch.nn.Embedding(8,1)\n",
         "        self.mlp = torch.nn.Sequential(\n",
         "            torch.nn.Linear(6,15),\n",
@@ -1181,7 +1181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 12,
       "metadata": {
         "tags": []
       },
@@ -1192,7 +1192,7 @@
         "loss_fn = torch.nn.MSELoss()\n",
         "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
         "#--# \n",
-        "for epoc in range(100):\n",
+        "for epoc in range(1000):\n",
         "    # 1\n",
         "    yhat = net(X1,X2) \n",
         "    # 2\n",
@@ -1207,7 +1207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 13,
       "metadata": {
         "tags": []
       },
@@ -1223,11 +1223,11 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "e749d1ad-9347-46e7-9156-8032e2f57e20"
+      "id": "f561eceb-eee2-4278-9b9e-8b95536d8887"
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 16,
       "metadata": {
         "tags": []
       },
@@ -1241,26 +1241,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
+        "(옥순-영식), (영자-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "cca29a7f-4e87-4551-96a1-6fc1da672d83"
+      "id": "8b73db95-51e8-4322-8606-cf50cfaa6854"
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 19,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
-        "XX1 = torch.tensor([1,7,8])\n",
-        "XX2 = torch.tensor([7,7,2])"
+        "XX1 = torch.tensor([0,1,8])\n",
+        "XX2 = torch.tensor([1,7,2])"
       ],
       "id": "bb83cd8a-6911-4b4d-a491-ac1f0dbceeba"
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 20,
       "metadata": {
         "tags": []
       },
@@ -1370,9 +1370,6 @@
         "2.  $X \\notin data$: $\\hat{y}=net(X)$ 는 predicted value, predicted\n",
         "    value with new data 라고 부른다.\n",
         "\n",
-        "`-` 경우1은 “$loss$ = $y$ 와 $\\hat{y}$ 의 차이” 를 정의할 수 있으나\n",
-        "경우2는 그렇지 않다.\n",
-        "\n",
         "## E. 다양한 코드들\n",
         "\n",
         "`-` 파이썬 코드..\n",
@@ -1410,13 +1407,13 @@
         "`-` 리눅스관련: <https://guebin.github.io/DSTBX2024/> – 자료 부실함..\n",
         "강의영상 없는것 많음..\n",
         "\n",
-        "`-` 클래스기본: https://guebin.github.io/PP2023/ – `10wk-2` ~ `15wk-2`\n",
+        "`-` 클래스기본: <https://guebin.github.io/PP2023/> – `10wk-2` ~ `15wk-1`\n",
         "\n",
         "He, Xiangnan, Lizi Liao, Hanwang Zhang, Liqiang Nie, Xia Hu, and\n",
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "7803910c-3e6c-4e1e-8c78-4980d56db668"
+      "id": "b21105a5-afa4-4a5f-a6f6-b2f366f1c688"
     }
   ],
   "nbformat": 4,
