--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -13,29 +13,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/11wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "e145d342-2b60-4be5-b66e-3b19ce79b725"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-xl7f2bcPTKMVCe3kHM380M&si=5SO7pni3fXX4kK-4 >}}"
-      ],
-      "id": "14dd1448-f6d9-4e15-a364-e0c5f4a69148"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-y4jDwHKvjCIA0zPHvUsYxx&si=X5fHH0vOTVR_-iXZ>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "cb90454f-a341-4ffe-bdfe-27b3aa7085e7"
+      "id": "654169f9-1853-479d-b29f-e2d8d46749f9"
     },
     {
       "cell_type": "code",
@@ -62,7 +46,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "cd419a4f-f587-4f01-a499-7b1950d1232c"
+      "id": "e3271140-a8bc-41f2-8cbc-81ba319bf146"
     },
     {
       "cell_type": "code",
@@ -88,7 +72,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "b9baeef0-2e9a-4b5f-9f25-60451fb4fc68"
+      "id": "32a982db-6668-4664-97f7-ac867f56952c"
     },
     {
       "cell_type": "code",
@@ -125,7 +109,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "1b577c8e-bd42-479a-a290-d790f687dba9"
+      "id": "dca7cc0a-28dc-423b-bb30-dda6536af6ec"
     },
     {
       "cell_type": "code",
@@ -168,7 +152,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "e3c94922-8fcc-4bca-87ae-9d220242f0e5"
+      "id": "a9e2ec18-064b-42a6-bc90-c3554df9332c"
     },
     {
       "cell_type": "code",
@@ -220,7 +204,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "c8639053-681f-464a-800b-505d6fdbaa6a"
+      "id": "137ee175-01f9-4ca9-9a7d-c36ba98fbca0"
     },
     {
       "cell_type": "code",
@@ -274,7 +258,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "ad726d44-97b5-49d5-881a-b4e622dd3e02"
+      "id": "9aa2ef45-caf9-4e2b-98fd-86d7dbd424e8"
     },
     {
       "cell_type": "code",
@@ -314,7 +298,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "64467072-2ff4-4aca-a736-0e2ec89e946a"
+      "id": "0bf9646e-a27d-4cf1-9567-39f2bc3452c6"
     },
     {
       "cell_type": "code",
@@ -374,7 +358,7 @@
         "\n",
         "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "616d14bc-4f44-4273-b941-9cf740985001"
+      "id": "215bec02-f884-41f6-b676-7481e3c23bd7"
     },
     {
       "cell_type": "code",
@@ -434,7 +418,7 @@
       "source": [
         "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "6778bde9-79bd-414e-8ac7-53bdaf5a290d"
+      "id": "8d7fe846-ea70-4dd1-9a9a-c9123d4ab331"
     },
     {
       "cell_type": "code",
@@ -458,7 +442,7 @@
         "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
         "    출력하게 될것임"
       ],
-      "id": "80677e1e-1eb0-4ca3-8eee-5b18330ecd92"
+      "id": "9a956a9b-bd7b-431f-bccc-a00c715c08b2"
     },
     {
       "cell_type": "code",
@@ -496,7 +480,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "4a2bdaff-47ce-4e70-8a26-bb09e8e6081c"
+      "id": "d15c5969-d99c-49a7-b017-5e3edf047619"
     },
     {
       "cell_type": "code",
@@ -540,7 +524,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "e8ef81c6-c643-497f-97ca-9107d7c329b8"
+      "id": "6755053b-50e5-4aea-b57c-40470178ab19"
     },
     {
       "cell_type": "code",
@@ -652,7 +636,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "a73f73a1-5d44-461d-b389-665f75166b7d"
+      "id": "ad1ef75d-947a-44a8-93f5-641212779477"
     },
     {
       "cell_type": "code",
@@ -696,7 +680,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "da7ec7da-ab3f-4c02-8237-78ddc13bfc22"
+      "id": "4fbafc8f-72ea-4db3-af87-e6aa7649799b"
     },
     {
       "cell_type": "code",
@@ -808,7 +792,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "0a338d50-b153-47b8-b60b-044ed061568d"
+      "id": "e9b4cb06-134c-454b-9621-b69e145f30b9"
     },
     {
       "cell_type": "code",
@@ -848,7 +832,7 @@
         "\n",
         "(풀이1) – `net(X1,X2)`"
       ],
-      "id": "6bfa58a9-4959-4001-919d-3bc722cd747e"
+      "id": "292d8034-4208-425f-bd6d-025271e45c91"
     },
     {
       "cell_type": "code",
@@ -921,7 +905,7 @@
       "source": [
         "(풀이2) – `net(X)`"
       ],
-      "id": "74aa7cd5-9c95-4846-9aa1-ef051d604c70"
+      "id": "ecd172f9-57e4-4419-9537-33bb2a21752a"
     },
     {
       "cell_type": "code",
@@ -1024,7 +1008,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "6b5eaccd-d137-4cac-9610-32797d440f7e"
+      "id": "26b48f3e-c914-4974-ae52-3045011c8ca2"
     },
     {
       "cell_type": "code",
@@ -1064,7 +1048,7 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "fba1d573-d5fd-420a-8e7d-a60aa40d155a"
+      "id": "6f118a00-3b62-4839-a27e-0fd06ee60bae"
     },
     {
       "cell_type": "code",
@@ -1142,7 +1126,7 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "a2afbe32-271b-4100-9242-4301c38fe9e7"
+      "id": "71750cab-37d1-4393-b240-625f8ad9b115"
     },
     {
       "cell_type": "code",
@@ -1223,7 +1207,7 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "f561eceb-eee2-4278-9b9e-8b95536d8887"
+      "id": "c591c11a-9c53-45f2-95e5-bb179f8c02c6"
     },
     {
       "cell_type": "code",
@@ -1243,7 +1227,7 @@
       "source": [
         "(옥순-영식), (영자-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "8b73db95-51e8-4322-8606-cf50cfaa6854"
+      "id": "31d29b35-ad6b-4463-a2d9-683f48031649"
     },
     {
       "cell_type": "code",
@@ -1413,7 +1397,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "b21105a5-afa4-4a5f-a6f6-b2f366f1c688"
+      "id": "5869975f-f5de-46de-94df-5a4f69e9252f"
     }
   ],
   "nbformat": 4,
