--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "eba97664-b018-4a6d-8ff6-d3ee322bd7e6"
+      "id": "db5e379a-dcef-463c-9149-bb260f97e209"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "a19ed4e3-7c39-440f-8219-5db2a1a53bf5"
+      "id": "f35e7c36-bbc1-4000-9ea3-85b994ab9964"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "bb68a292-d932-42d1-a0ce-2424acf3fc72"
+      "id": "ff856511-4e0f-4f90-bd56-c239b3b0b186"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "ae09ca3f-c5c7-46cb-b144-5f78780d268b"
+      "id": "d01e3d75-613d-4a95-bba3-04aa438d1fd1"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "19030488-739a-4fb5-8aa7-3b3960c7ccb2"
+      "id": "cc938434-7fef-4e5a-8d94-736f1ffe9375"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "67208592-778c-4a61-af7b-782c9168db7a"
+      "id": "7bca6724-aa08-45d0-9919-cf80cf750917"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "40e5986c-9eed-4573-8d7f-37dd6b49322c"
+      "id": "a15927d8-c11f-4590-8e35-3d8d6a3399ec"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "a8bd02a8-5e83-42ce-beb8-59fb2df3666b"
+      "id": "727b3099-c0d4-482e-b73f-1e1693293609"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "7e8ddc6a-c3b1-417d-9462-9cd3a3955fa3"
+      "id": "6c06a062-b689-443c-b2dd-2e541d9967f6"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "2ca7bc4e-6a5a-4f04-9870-b2644cd26904"
+      "id": "2061ee7e-2454-4bdb-ba9a-0432b00cc019"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "02cef595-2e3f-41c7-b784-5ca882184b70"
+      "id": "7144423d-9bec-4f47-84a9-a0dbd7c35d1d"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "4d34a0d4-54c5-4c4c-b376-3b8e40eb979b"
+      "id": "8f72d875-e6b9-4704-a39b-ef026f39c576"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "b4c08f01-a48b-4e20-9d83-20b29ed20972"
+      "id": "15b1dbc2-6ca5-467c-9f6f-820730200e86"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "3cd82a06-686f-4060-80c8-14c0e8136ae4"
+      "id": "a215ce50-542e-4714-8ea9-ee0bb81dae0b"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "dd0eee9d-96d0-48b5-920f-51bed2856d5a"
+      "id": "b357d462-4871-4b18-9c3a-cdb725122637"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "eb1084da-36de-410e-b488-c25d32a8b2c9"
+      "id": "cfa0e3c5-c74a-44ca-8dd8-739161866139"
     },
     {
       "cell_type": "code",
