--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "64f2ffa7-6849-4084-823f-ef114ce6e553"
+      "id": "667c0e21-f5b4-45e3-8e24-dc435145a54a"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "ed6ca2ce-88ae-494e-96cd-beddc98b34d7"
+      "id": "d39a5799-e36c-476c-a2e6-fc9168ff844b"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "35c4c712-8e57-4db9-803a-c1ff21c29b9c"
+      "id": "b7a9b405-8da0-4c38-8726-37fb5d14f064"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "c08e107d-8b99-40c2-a546-7f89b35fe5dd"
+      "id": "f6dee27b-de44-4ce1-91eb-17412458d859"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "e77610af-2157-417b-a494-e046870a4dbf"
+      "id": "3000b1e8-59b3-4376-aab7-5f854e2dcd87"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "3d738f7a-d49d-4f18-8815-454ec02c8130"
+      "id": "c15ab8a1-3f49-4008-a08f-c6712357528a"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "4440f7c2-c04d-4593-8786-b16281625dff"
+      "id": "555fe027-4a74-48ad-a984-6ad84e9c7524"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "efdc682a-1fa0-48aa-bc0e-a138e73ce6b8"
+      "id": "b9a739a8-152f-4f56-be45-f8880e01c320"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "f1dca2a8-4313-4f9e-893c-ec8eafd9e1c8"
+      "id": "220cc76f-b540-48de-8e03-405e284553a7"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "f2436dc3-2a7e-4327-a9e8-63bbad1003ea"
+      "id": "07fbb3cd-6eee-49e9-8cb8-608bcbf852fb"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "4c023b8e-6d34-45c0-8557-c23668be307f"
+      "id": "389c4192-ac47-46d7-aabb-8ae7996ce671"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "42118c21-530e-424f-a193-391baadb0679"
+      "id": "5dd7bef5-cdcf-4204-8136-e56c9299c05d"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "a12487b4-33b3-42cb-afe1-6b4235d621ef"
+      "id": "d0afd407-5bab-4b40-abb5-ca3f5cec3ad1"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "aec8c50d-93c0-4da6-97f4-48b264ac9d21"
+      "id": "e805f798-0cd6-453f-9154-3cd39a066d48"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "dada8e6c-896c-4839-a576-134fdf07959a"
+      "id": "4519b985-8ea3-4c6a-8c36-85307ec209e3"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "2c8aa8f2-e9dd-498f-839b-cc66402116e7"
+      "id": "817882bc-12e3-47d4-a0c3-07b128716718"
     },
     {
       "cell_type": "code",
