--- a/docs/posts/12wk-1.out.ipynb
+++ b/docs/posts/12wk-1.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/12wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "3c0622dc-f359-451d-b886-729d283149c2"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "# {{<video https://youtu.be/playlist?list=PLQqh36zP38-yrZ4HbNgYDmklcumxJHSOp&si=XO2ZBUtY_m1mSFvX >}}"
-      ],
-      "id": "5438ffc0-e158-4c22-9e4b-f759b5af2f75"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-xq0bBQn8ZP607mS0ZKI8Sg&si=-cQULuc2x7noftgE>\n",
+        "\n",
         "# 2. Import"
       ],
-      "id": "1c7a1664-456c-4f14-ac5d-6b65d76a6442"
+      "id": "bc85c0fd-a161-4d67-9cb8-19a2edd5c479"
     },
     {
       "cell_type": "code",
@@ -71,7 +55,7 @@
         "\n",
         "`-` 데이터 정리"
       ],
-      "id": "5835f765-51ce-48a1-ac8b-dfbf66dd4d9f"
+      "id": "4857c84b-6e0c-4df7-a3e4-9695215a94c4"
     },
     {
       "cell_type": "code",
@@ -130,7 +114,7 @@
       "source": [
         "## B. 풀이 – 실패"
       ],
-      "id": "ec137e1a-e1d2-4e6d-a8b5-ebdc7213e2b9"
+      "id": "0cc190e1-929b-4571-b77f-424cb40f40b0"
     },
     {
       "cell_type": "code",
@@ -200,7 +184,7 @@
         "\n",
         "`-` 일단 망한건 망한거고 분석을 위해서 숫자좀 체크하자."
       ],
-      "id": "c8e4c5a7-7153-4822-85a9-5ae1e3f26d11"
+      "id": "99601ce8-0c8c-4b90-a86a-a076ee0c7cd6"
     },
     {
       "cell_type": "code",
@@ -224,7 +208,7 @@
         "\n",
         "`-` 새로운 방식의 데이터 정리"
       ],
-      "id": "92decf90-683f-44a4-9ad5-6b91decbbe4a"
+      "id": "539c77b4-a9a5-47fb-b588-94b4145cb93e"
     },
     {
       "cell_type": "code",
@@ -247,7 +231,7 @@
       "source": [
         "`-` 사용자 정의 Hnet를 사용"
       ],
-      "id": "83814660-e0b9-4d35-8834-a6f1898c0c61"
+      "id": "a2519ebd-b5a7-4b0b-81f5-8829fda1ff9e"
     },
     {
       "cell_type": "code",
@@ -294,7 +278,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "4a515d54-2478-453f-9c94-ee88946acb02"
+      "id": "f3a3a858-787c-4e2f-b828-53d0622cc8de"
     },
     {
       "cell_type": "code",
@@ -318,7 +302,7 @@
         "\n",
         "`# 예비학습` – 아래를 관찰하자."
       ],
-      "id": "aa10eab8-f4ef-4cab-a3d7-9ca14d8101a5"
+      "id": "6246e7e7-a2f6-4f3b-b818-63d576f06907"
     },
     {
       "cell_type": "code",
@@ -380,7 +364,7 @@
         "\n",
         "`-` 또 다른방식의 구현"
       ],
-      "id": "9868871f-a739-4e8b-8080-56ea2cb88631"
+      "id": "9812a095-316e-4103-9f8c-925f8a9a1dc4"
     },
     {
       "cell_type": "code",
@@ -446,7 +430,7 @@
       "source": [
         "`-` 이것도 숫자좀 체크해보자."
       ],
-      "id": "7d80963f-ddbd-4c08-9ae4-7c76bdb22054"
+      "id": "8cc797df-d2bb-4ef4-a090-ecd5c0b635e4"
     },
     {
       "cell_type": "code",
@@ -466,7 +450,7 @@
       "source": [
         "`-` 임베딩공간의 해석"
       ],
-      "id": "4d39d686-8bcb-4a87-83c6-c70a614e6f25"
+      "id": "0db75066-1a0c-46b5-b9bf-c4def3ef32c6"
     },
     {
       "cell_type": "code",
@@ -715,7 +699,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "3599ec01-36e3-4e89-a07b-27a2e1a1a7e8"
+      "id": "bef59ebd-bd67-4d38-8c75-a870f1ee955e"
     },
     {
       "cell_type": "code",
@@ -738,7 +722,7 @@
       "source": [
         "`-` 순환신경망으로 적합"
       ],
-      "id": "7d4d9334-bb27-4c1d-a393-4fa7c6e86008"
+      "id": "ee1a2a14-de27-4002-8717-125a81a0072f"
     },
     {
       "cell_type": "code",
@@ -789,7 +773,7 @@
       "source": [
         "`-` 결과 확인 및 시각화"
       ],
-      "id": "ef5a4c64-616b-43ce-af1f-73c83f4877d2"
+      "id": "024dc981-8cf2-43ee-872a-5d713407cebe"
     },
     {
       "cell_type": "code",
@@ -838,7 +822,7 @@
       "source": [
         "`-` yhat 값 분석"
       ],
-      "id": "16990c4e-2e6d-4613-afa4-c2eca68dec67"
+      "id": "dfe2beaf-5a1a-447d-ab40-95e7aa3ab2af"
     },
     {
       "cell_type": "code",
@@ -860,7 +844,7 @@
         "\n",
         "`-` h1,h2 분석 (= 임베딩스페이스 분석)"
       ],
-      "id": "beabb7ad-5f83-4250-a31d-73d749437a1f"
+      "id": "83d1d9e4-30d3-43c2-abae-859b9639e5ad"
     },
     {
       "cell_type": "code",
@@ -899,7 +883,7 @@
         "\n",
         "`-` 데이터정리"
       ],
-      "id": "657b9ebd-fca7-4c98-a22b-2af7dbf46a9a"
+      "id": "9486af08-3389-4a98-b3f5-768adb61be2c"
     },
     {
       "cell_type": "code",
@@ -922,7 +906,7 @@
       "source": [
         "`-` Net설계 및 가중치 설정 (구현1과 동일하도록 가중치 초기화)"
       ],
-      "id": "96641e4f-a8c3-4579-a8f7-bb83ea397044"
+      "id": "47d3ca68-db08-440e-a2c0-f20272f981a5"
     },
     {
       "cell_type": "code",
@@ -960,7 +944,7 @@
       "source": [
         "`-` 손실함수 및 옵티마이저 설정"
       ],
-      "id": "07c3e707-ae9d-4dc0-852f-864385d8f388"
+      "id": "0d325727-a3e2-4aea-8a17-601ddcaea699"
     },
     {
       "cell_type": "code",
@@ -981,7 +965,7 @@
       "source": [
         "`-` 학습"
       ],
-      "id": "e429f7d2-1259-456d-baef-e0cbc27c3344"
+      "id": "b37cccb4-3336-4a30-8b7b-7a7ec2fd386f"
     },
     {
       "cell_type": "code",
@@ -1016,7 +1000,7 @@
       "source": [
         "`-` 결과확인"
       ],
-      "id": "7691b453-eb8f-4efb-8cc9-32d6b5c2d197"
+      "id": "db48bcf6-3724-43f2-b274-d42e3c3617dd"
     },
     {
       "cell_type": "code",
@@ -1040,9 +1024,36 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-   구현1과 같은 결과"
+        "-   구현1과 같은 결과\n",
+        "\n",
+        "# 5. HW: hello\n",
+        "\n",
+        "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "c2771055-86a5-4e9a-a55b-c42fc4e82ecf"
+      "id": "1673cd4b-9ff8-4cce-a4ee-8494c870be00"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 176,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "txt = list('hello'*100)\n",
+        "txt[:10]"
+      ],
+      "id": "a0d23169-85b2-4c86-93d8-b702ca18995e"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "`(1)` `rNNCell`을 이용하여 학습하라. (적절한 은닉노드수를 설정할 것)\n",
+        "\n",
+        "`(3)` `torch.nn.RNNCell`을 이용하여 (2)의 결과를 재현하라."
+      ],
+      "id": "f048f064-b2b2-4649-a9d4-c5ced09b8874"
     }
   ],
   "nbformat": 4,
